<resources>
    <string name="app_name">Heady</string>
    <string name="product">Product</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="size">Size</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="most_purchased">Most Purchased</string>
    <string name="most_shared">Most Shared</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
</resources>